# infodas

./: .gitignore  README.md  asset_gap.py  create_fake_gs.py  pyproject.toml  requirements.txt  test_openrouter.py
.cache/: intfloat_multilingual-e5-large_embeddings_20.npy
.cache/query_emb/: intfloat_multilingual-e5-large.pkl
data/: fake.xml
src/: discriminator.py  fetch.py  golden_dataset.py  judge.py  models.py  parse_gs.py  parse_gspp.py  rate_limit.py  report.py  run.py  shortlist.py  validation.py  visualize_graph.py
tests/: test_parse_gspp.py
